kubernetes/argocd/applications/excalidraw/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: excalidraw.kubeden.io
spec:
  tls:
  - hosts:
    - excalidraw.kubeden.io
    secretName: excalidraw-tls
  rules:
  - host: excalidraw.kubeden.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: excalidraw
            port: 
              number: 80
